# micrograd

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  pages.yml
docs/: Doxyfile.in
examples/: basic.c
include/micrograd/: layer.h  mlp.h  neuron.h  value.h
src/: layer.c  mlp.c  neuron.c  value.c
test/: test.c
